[UPGRADE] upgraded to img

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </svg>
                     </a>
                     <a class="a-free" id="alertButton" href="https://discord.gg/GWxedHT3d2">
-                        <button class="button-free"><p>Try for Free</p> <img src="./static/img/discord-logotype.svg" alt="discord-logotype"></button>
+                        <button class="button-free"><p>Try for Free</p> </button>
                     </a>
                     <a href="javascript:void(0);"  class="icon" >
                         <button id="navToggleId" class="nav-toggle">
@@ -120,7 +120,7 @@
                 <div id="Usecases" class="container-preview-logotype">
                     <div class="div-free">
                         <a class="a-free" id="alertButton2" href="https://discord.gg/GWxedHT3d2">
-                        <button class="button-free">Try for Free <img src="./static/img/discord-logotype.svg" alt="discord-logotype"></button>
+                        <button class="button-free">Try for Free</button>
                         </a>
                         <a class="a-how" id="alertButton4" href="https://docs.logolivery.ai/" target="_blank">
                         How to Use
@@ -450,7 +450,7 @@
                 <p></p>
                 <h4>Generate Your <br>First <span>SVG</span> Logo</h4>
                 <a id="alertButton3" href="https://discord.gg/GWxedHT3d2">
-                    <button>Try for Free <img src="./static/img/img-footer/discord_icon_footer.svg" alt="discord"></button>
+                    <button>Try for Free </button>
                 </a>
                 
             </div>
